--- a/usercard.css
+++ b/usercard.css
@@ -3,4 +3,15 @@
 }
 .card{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 30%;
+    transition: 0.2s;
+}
+
+.cardbody{
+    padding: 2px 16px;
+}
+
+.cardimage{
+    width: 100%;
+
 }
